src/assets/main.css
/* @import './base.css'; */
@import "tailwindcss";

@theme {
  --color-primary: #6366f1;
  --color-primary-dark: #4f46e5;
  --color-secondary: #0f172a;
  --color-accent: #f59e0b;

  --color-background: #ffffff;
  --color-surface: #f8fafc;
  --color-text: #1e293b;
}

@utility hover-navbar {
  @apply hover:text-white hover:bg-purple-500 rounded-lg px-4 py-3 transition-colors duration-200;
}

@utility active-navbar {
  @apply text-white bg-purple-500 rounded-lg px-4 py-3 transition-colors duration-200;
}

@utility hover-skills {
  @apply relative
  transition-all duration-300 ease-out
  hover:scale-105
  hover:-translate-y-1
  hover:bg-gradient-to-br hover:from-slate-100 hover:to-white
  hover:shadow-xl
  hover:border-slate-300
  hover:ring-2 hover:ring-orange-200;
}

html {
  scroll-behavior: smooth;
}

@custom-variant dark (&:where(.dark, .dark *));

* {
  transition:
    background-color 0.25s color 0.25s,
    border-color 0.25s;
}

